--- a/hello_world_pets_website/static/css/index.css
+++ b/hello_world_pets_website/static/css/index.css
@@ -1,7 +1,7 @@
 /* Homepage CSS*/
 
-/* background photo is from https://www.pexels.com/photo/blue-wallpaper-2680270/
-   Photo by: Mudassir Ali
+/* background photo is from https://www.vecteezy.com/vector-art/464264-dog-seamless-pattern-theme-bone-paw-foot-print-for-use-as-wallpaper-or-background
+   Photo by: unknown
 
    Found coding info here: https://developer.mozilla.org/en-US/docs/Web/CSS/background-image
 
