Fixed styling of gender radio buttons on update pet mpdal form on admin page

--- a/hello_world_pets_website/templates/admin.html
+++ b/hello_world_pets_website/templates/admin.html
@@ -253,10 +253,10 @@
 											<input type="text" class="form-control pet-age" name="pet-age" value="{{p[4]}}">
 											<label for="pet-gender" class="col-form-label">Gender:</label>
 											<br>
-											<input class="form-check-input pet-gender" type="radio" name="pet-gender" id="pet_gender1" value="{{p[5]}}">
+											<input style="margin-left:55px" class="form-check-input pet-gender" type="radio" name="pet-gender" id="pet_gender1" value="{{p[5]}}">
 											<label class="form-check-label" for="pet_gender1"> Female </label>
 											<br>
-											<input class="form-check-input pet-gender" type="radio" name="pet-gender" id="pet_gender2" value="{{p[5]}}">
+											<input style="margin-left:55px" class="form-check-input pet-gender" type="radio" name="pet-gender" id="pet_gender2" value="{{p[5]}}">
 											<label class="form-check-label" for="pet_gender2"> Male </label>
 											<br>
 											<label for="customer-first-name" class="col-form-label">Customer First Name:</label>
