--- a/hello_world_pets_website/static/css/classes.css
+++ b/hello_world_pets_website/static/css/classes.css
@@ -9,7 +9,8 @@
 body{
   background-image: url('background.jpg');
   background-size: 150px;
-  /*color: rgba(225, 225, 225, 0.63); */
+  /*opacity: 0.65;*/
+  /*color: rgba(225, 225, 225, 0.63);*/
   /* Background image opacity: https://coder-coder.com/background-image-opacity/*/
 }
 
