Updated Classes table on Admin page to insert with a teacher's first and last name rather than teacher id

--- a/hello_world_pets_website/templates/admin.html
+++ b/hello_world_pets_website/templates/admin.html
@@ -426,14 +426,15 @@
 				<!--<td colspan="11">-->
 					<form action="" method="post">
 						<td><input style="width:4px" type="number" name="class_id" hidden></td>
-						<td><input style="width:180px" type="text" name="class_name" placeholder="Class Name"></td>
-						<td><input style="width:300px" type="text" name="class_description" placeholder="Class Description"></td>
-						<td><input style="width:180px" type="date" name="class_day" placeholder="Day"></td>
-						<td><input style="width:180px" type="datetime-local" name="class_time" placehoder="Time"></td>
-						<td><input style="width:50px" type="number" name="class_price" value="Price"></td>
-						<td><input style="width:50px" type="number" name="class_seats" value="Class Seats"></td>
-						<td><input style="width:50px" type="number" name="teacher_id" value="Teacher ID"></td>
-                        
+						<td><input style="width:150px" type="text" name="class_name" placeholder="Class Name"></td>
+						<td><input style="width:280px" type="text" name="class_description" placeholder="Class Description"></td>
+						<td><input style="width:145px" type="date" name="class_day" placeholder="Day"></td>
+						<td><input style="width:175px" type="datetime-local" name="class_time" placehoder="Time"></td>
+						<td><input style="width:45px" type="number" name="class_price" placeholder="Price"></td>
+						<td><input style="width:45px" type="number" name="class_seats" placeholder="Class Seats"></td>
+						<td><input style="width:150px" type="text" name="teacher_first_name" placeholder="Teacher First Name"></td>
+						<td><input style="width:150px" type="text" name="teacher_last_name" placeholder="Teacher Last Name"></td>
+
 						<td><button id="classButton" class="btn btn-secondary" name="class-insert" value="0">Add Class</button></td>					
 					</form>
 				<!--</td>-->
