Added dropdowns to INSERT on Enrollments table on Admin page

--- a/hello_world_pets_website/templates/admin.html
+++ b/hello_world_pets_website/templates/admin.html
@@ -643,8 +643,23 @@
 					<!--<td colspan="11">-->
 					<form action="" method="post">
 						<td><input type="number" name="enroll_id" hidden></td>
-						<td><input type="text" name="pet_name" placeholder="Pet Name"></td>
-						<td><input type="text" name="class_name" placeholder="Class Name"></td>
+						<td>
+							<SELECT name="pet_name">
+							{% for pet in petNames %}
+							<option value="{{pet}}">{{pet}}</option>
+							{% endfor %}
+							</SELECT>
+					   </td>
+						<!--<td><input type="text" name="pet_name" placeholder="Pet Name"></td>-->
+						<td>
+							<SELECT name="class_name">
+								{% for class in classNames %}
+								<option value="{{class}}">{{class}}</option>
+								{% endfor %}
+							</SELECT>
+						</td>
+
+						<!--<td><input type="text" name="class_name" placeholder="Class Name"></td>-->
 						<td><button id="enrollButton" class="btn btn-secondary" name='enroll-insert' value="0">Enroll
 								Pet</button></td>
 					</form>
