--- a/hello_world_pets_website/templates/pets.html
+++ b/hello_world_pets_website/templates/pets.html
@@ -90,26 +90,41 @@
     <form action="" method="post">
     	<fieldset>
     		<div class="form-check form-check-inline">
-    			<input class="form-check-input" type="radio" name="searchPets" value="customerName" checked>
-  				<label class="form-check-label" for="className">Customer Name</label>
+    			<input id="customerName" class="form-check-input" type="radio" name="searchPets" value="customerName">
+				  <label class="form-check-label" for="customerName">Customer Name</label>
+				  <SELECT id="listCustomers" name="select-customer-name">
+					{% for n in customer_list %}
+					<option value="{{n[1]}} {{n[2]}}">{{n[1]}} {{n[2]}}</option>
+					{% endfor %}
+				  </SELECT>
   			</div>
 
   			<div class="form-check form-check-inline">
-  				<input class="form-check-input" type="radio" name="searchPets" value="petName">
-  				<label class="form-check-label" for="day">Pet Name</label>
+  				<input id="petName" class="form-check-input" type="radio" name="searchPets" value="petName">
+				  <label class="form-check-label" for="petName">Pet Name</label>
+				  <SELECT id="listPets" name="select-pet-name">
+					{% for pet in pet_list %}
+					<option value="{{pet[1]}}">{{pet[1]}}</option>
+					{% endfor %}
+				  </SELECT>
   			</div>
 
   			<div class="form-check form-check-inline">
-  				<input class="form-check-input" type="radio" name="searchPets" value="petType">
-  				<label class="form-check-label" for="time">Pet Type (Species or Breed)</label>
+  				<input id="petType" class="form-check-input" type="radio" name="searchPets" value="petType">
+				  <label class="form-check-label" for="petType">Pet Type (Species or Breed)</label>
+				  <SELECT id="listSpecies" name="select-pet-species">
+					{% for species in pet_list %}
+					<option value="{{species[2]}}">{{species[2]}}</option>
+					{% endfor %}
+				  </SELECT>
   			</div>
 
   			<div>
-  				<input type="text" style="width: 400px;" name="petSearchText">
+  				<!--<input type="text" style="width: 400px;" name="petSearchText">-->
   				<button type="submit" class="btn btn-primary">Find Pets</button>
   			</div>
     	</fieldset>
-  	
+  	</form>
   	</div>
 </div>
 
@@ -182,6 +197,53 @@
   			</div>
 		</div>
 	</div>
+
+
+	<!--I wanted to find a way to show a dropdown menu based off of
+	what radio button was selected in the search form. I found this solution
+	on SO using JQuery
+	https://stackoverflow.com/questions/31320161/how-do-i-display-a-dropdown-list-on-clicking-a-radio-button-->
+	<script>
+
+		// Grab group of radio buttons to determine which one is selected
+		var radio_buttons = document.getElementsByName("searchClasses");
+
+		for (var i = 0; i < radio_buttons.length; i++) {
+    		radio_buttons[i].addEventListener("change", setDropDown);
+		}
+
+		// Display dropdown menu depending on what radio button is selected
+		function setDropDown() {
+    		setDropDownsForNoDisplay();
+    		if (this.checked) {
+       		 	setDropDownForDisplay(this.value);        
+    		}
+		}
+
+		// Helper functions to select dropdowns 
+		var dropdowns = document.getElementsByTagName("select");
+		
+		function setDropDownsForNoDisplay() {
+    		for (var i = 0; i < dropdowns.length; i++) {
+        		dropdowns[i].classList.add("no-display");
+    		}
+		}
+
+		function setDropDownForDisplay(x) {
+    		if (x === "customerName") {
+        		document.getElementById("listCustomers").classList.remove("no-display");
+    		
+			} else if (x === "petName") {
+        		document.getElementById("listPets").classList.remove("no-display");
+    		
+			} else if (x === "petType") {
+        		document.getElementById("listSpecies").classList.remove("no-display");
+    		}
+		}
+
+
+
+	</script>
 
 </body>
 
