updated corresponding html files with male, female changes for gender attribute in Pets table

--- a/hello_world_pets_website/templates/admin.html
+++ b/hello_world_pets_website/templates/admin.html
@@ -341,10 +341,10 @@
 						<td><input style="width:100px" type="text" name="pet_species" placeholder="Species"></td>
 						<td><input style="width:200px" type="text" name="pet_breed" placeholder="Breed"></td>
 						<td><input style="width:50px" type="number" name="pet_age" placehoder="Age"></td>
-						<td><input type="radio" name="pet_gender" id="pet_gender1" value="1">
+						<td><input type="radio" name="pet_gender" id="pet_gender1" value="F">
 							<label for="pet_gender1">Female</label>
 							<br>
-							<input type="radio" name="pet_gender" id="pet_gender2" value="2">
+							<input type="radio" name="pet_gender" id="pet_gender2" value="M">
 							<label for="pet_gender2">Male</label></td>
 						<td>
 							<SELECT name="customer_name_select">
